# discord-rpc

./: .gitignore  CMakeLists.txt  deploy.bat  gui.cpp  gui.h  main.cpp  module.py  sign-exe.bat  test_rpc.py  worker.cpp  worker.h
.github/: FUNDING.yml
